# humanoid-tech-ops

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: alert-watch.yml  ci.yml  collect-daily.yml  weekly-report.yml
docs/: architecture.md
docs/adr/: 0001-llm-provider.md  0002-feishu-as-source-of-truth.md  0003-mcp-stdio-not-http.md
docs/plans/: 2026-05-26-humanoid-tech-ops-agent-design.md  2026-05-26-humanoid-tech-ops-implementation.md
entrypoints/: build_weekly.py  collect_daily.py  mcp_server.py  watch_alerts.py
src/: classifier.py  config.py  json_utils.py  llm_client.py  schemas.py
src/analyzer/: insight.py  urgent.py
src/collectors/: arxiv.py  base.py  feeds.py  funding.py  github_release.py  podcast.py  rss.py  vendor.py  youtube.py
src/delivery/: alert.py  weekly.py
src/prompts/: classify.py  insight.py  urgent.py  weekly.py
src/storage/: bitable.py
tests/: test_arxiv_collector.py  test_base_collector.py  test_bitable.py  test_classifier.py  test_config.py  test_funding_collector.py  test_github_release_collector.py  test_insight.py  test_llm_client.py  test_podcast_collector.py  test_rss_collector.py  test_schemas.py  test_urgent.py  test_vendor_collector.py  test_youtube_collector.py
